# SunFlower

./: .gitignore  CMakeLists.txt  README.md  SVNsync.txt
GeoUnited2024/: CMakeLists.txt  README.md  ReadMe.txt
GeoUnited2024/GeoUnited2024Console/: GeoUnited2024Console.sln  ReadMe.txt
GeoUnited2024/include/: AABB.h  AddTrimLoop2SurfPointsPack_.h  AllTrimLoopUtilities_.h  AnalyzeSurface.h  AngleSupport.h  Arc.h  ArcPointGenerator.h  BSplineControlPoints.h  BSplineCurveDegree1.h  BSplineKnots.h  BSplineM3.h  BSplineM4.h  BSplineNSet.h  BSplineSurface.h  BSplineWeights.h  BasicDef.h  BasicGeoIntr2dUI.h  Bifstream.h  Boundary.h  BoundingBox.h  BoundingBox2TriMesh.h  BoxCollisionCheck.h  BspToConvexLoops.h  BspTree.h  BspTreeToLineSet2d.h  CalcMeshByDelaunay2D.h  CmnBase.h  CollPrimitiveFactory.h  CompositeCurvePointGenerator.h  ConicArcPointGenerator.h  ContourCCWCheck.h  CoordSystemDisplay.h  CoordinateSystem.h  CurveOnParametricSurface.h  CurvePointGenerator.h  CurveSpace.h  CylindiricalSpace.h  DTValueParser.h  DTable.h  DTableContainer.h  (+236 more)
GeoUnited2024/src/: AABB.cpp  AddTrimLoop2SurfPointsPack_.cpp  AllTrimLoopUtilities_.cpp  Arc.cpp  BSplineControlPoints.cpp  BSplineCurvePointGenerator.cpp  BSplineNFormer.cpp  BSplineSurfacePointGenerator.cpp  BSplineSurfacePointGenerator2.cpp  BasicGeoIntr2dUI.cpp  Bifstream.cpp  BoundingBox2TriMesh.cpp  BoxCollisionCheck.cpp  BspTreeBooleanOp.cpp  BspTreeConstructor.cpp  BspTreeToConvexLineGroups.cpp  BspTreeToLineSet2d.cpp  CalcMeshByDelaunay2D.cpp  Camera.cpp  CastIf.cpp  CollPrimitiveFactory.cpp  ColorDefinition.cpp  ConicArc.cpp  ContourCCWCheck.cpp  CoordSystemDisplay.cpp  CopiousDataPointGenerator.cpp  CurvePointGeneratorFactory.cpp  DTValueParser.cpp  DTable.cpp  DTableKeyAttributes.cpp  DTableKeys.cpp  DeBoorEvaluation2.cpp  DeBoorEvaluation3.cpp  DelRefMeshTest.cpp  DosyaPaketleme.cpp  DraftEntity.cpp  (+217 more)
(+399 files in other folders)
